[gd_scene load_steps=54 format=3 uid="uid://baohngfi20moo"]

[ext_resource type="Texture2D" uid="uid://cxp415rm8pqay" path="res://assets/player/_Attack.png" id="1_0owmy"]
[ext_resource type="Script" uid="uid://ckhu65f0vh27c" path="res://scenes/player/player.gd" id="1_qek5x"]
[ext_resource type="Texture2D" uid="uid://c8kju44jygmta" path="res://assets/player/_Death.png" id="2_qek5x"]
[ext_resource type="Texture2D" uid="uid://bcuoigsctsdeo" path="res://assets/player/_Fall.png" id="3_5gtgg"]
[ext_resource type="Texture2D" uid="uid://bn6c4t8qxu6me" path="res://assets/player/_Hit.png" id="4_h17s1"]
[ext_resource type="Texture2D" uid="uid://drb6sm84fvsb7" path="res://assets/player/_Idle.png" id="5_je7p5"]
[ext_resource type="Texture2D" uid="uid://dlo1ba0jcqs84" path="res://assets/player/_Jump.png" id="6_fm80t"]
[ext_resource type="Texture2D" uid="uid://blhkce5jenkyu" path="res://assets/player/_Run.png" id="7_gx1jg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ugbui"]
atlas = ExtResource("1_0owmy")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcs02"]
atlas = ExtResource("1_0owmy")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_myrg7"]
atlas = ExtResource("1_0owmy")
region = Rect2(240, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvlxm"]
atlas = ExtResource("1_0owmy")
region = Rect2(360, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_uf5tr"]
atlas = ExtResource("2_qek5x")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgqa7"]
atlas = ExtResource("2_qek5x")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ydkj"]
atlas = ExtResource("2_qek5x")
region = Rect2(240, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_3j4b4"]
atlas = ExtResource("2_qek5x")
region = Rect2(360, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_yj68g"]
atlas = ExtResource("2_qek5x")
region = Rect2(480, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ioxgp"]
atlas = ExtResource("2_qek5x")
region = Rect2(600, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_cnsyf"]
atlas = ExtResource("2_qek5x")
region = Rect2(720, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_007i1"]
atlas = ExtResource("2_qek5x")
region = Rect2(840, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_6cv16"]
atlas = ExtResource("2_qek5x")
region = Rect2(960, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4nxn"]
atlas = ExtResource("2_qek5x")
region = Rect2(1080, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qek5x"]
atlas = ExtResource("3_5gtgg")
region = Rect2(0, 0, 110, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gtgg"]
atlas = ExtResource("3_5gtgg")
region = Rect2(120, 0, 110, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_h17s1"]
atlas = ExtResource("3_5gtgg")
region = Rect2(240, 0, 110, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_tffgl"]
atlas = ExtResource("4_h17s1")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_je7p5"]
atlas = ExtResource("5_je7p5")
region = Rect2(0, 0, 110, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_fm80t"]
atlas = ExtResource("5_je7p5")
region = Rect2(120, 0, 110, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_gx1jg"]
atlas = ExtResource("5_je7p5")
region = Rect2(240, 0, 110, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_28m0y"]
atlas = ExtResource("5_je7p5")
region = Rect2(360, 0, 110, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_uniwh"]
atlas = ExtResource("5_je7p5")
region = Rect2(480, 0, 110, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqsei"]
atlas = ExtResource("5_je7p5")
region = Rect2(600, 0, 110, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_pk8ii"]
atlas = ExtResource("5_je7p5")
region = Rect2(720, 0, 110, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mf0n"]
atlas = ExtResource("5_je7p5")
region = Rect2(840, 0, 110, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_4hvnv"]
atlas = ExtResource("5_je7p5")
region = Rect2(960, 0, 110, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_bbmj2"]
atlas = ExtResource("5_je7p5")
region = Rect2(1080, 0, 110, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxw46"]
atlas = ExtResource("6_fm80t")
region = Rect2(0, 0, 110, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qxvo"]
atlas = ExtResource("6_fm80t")
region = Rect2(120, 0, 110, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_5q8fn"]
atlas = ExtResource("6_fm80t")
region = Rect2(240, 0, 110, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_rw8a5"]
atlas = ExtResource("7_gx1jg")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwuka"]
atlas = ExtResource("7_gx1jg")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_hyqqp"]
atlas = ExtResource("7_gx1jg")
region = Rect2(240, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ds1xl"]
atlas = ExtResource("7_gx1jg")
region = Rect2(360, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_1u1sw"]
atlas = ExtResource("7_gx1jg")
region = Rect2(480, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2t3bg"]
atlas = ExtResource("7_gx1jg")
region = Rect2(600, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jrbya"]
atlas = ExtResource("7_gx1jg")
region = Rect2(720, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahqnk"]
atlas = ExtResource("7_gx1jg")
region = Rect2(840, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_vb1ce"]
atlas = ExtResource("7_gx1jg")
region = Rect2(960, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ncpa"]
atlas = ExtResource("7_gx1jg")
region = Rect2(1080, 0, 120, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_upxxc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ugbui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcs02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_myrg7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvlxm")
}],
"loop": false,
"name": &"attack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uf5tr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgqa7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ydkj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3j4b4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yj68g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ioxgp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cnsyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_007i1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6cv16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4nxn")
}],
"loop": false,
"name": &"death",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qek5x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gtgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h17s1")
}],
"loop": true,
"name": &"fall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tffgl")
}],
"loop": true,
"name": &"hit",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_je7p5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fm80t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gx1jg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_28m0y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uniwh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqsei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pk8ii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mf0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4hvnv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bbmj2")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxw46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qxvo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5q8fn")
}],
"loop": true,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rw8a5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwuka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hyqqp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ds1xl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1u1sw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2t3bg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jrbya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahqnk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vb1ce")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ncpa")
}],
"loop": true,
"name": &"run",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qek5x"]
size = Vector2(20.5, 38)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5gtgg"]
size = Vector2(36.9112, 47.802)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qek5x"]
height = 38.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_qek5x")
movement_speed = 18000.0
jump_speed = 37000.0
gravity = 1000.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(4, -21)
sprite_frames = SubResource("SpriteFrames_upxxc")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.75, 0)
shape = SubResource("RectangleShape2D_qek5x")

[node name="FloorDetector" type="RayCast2D" parent="."]
position = Vector2(3, -2)
target_position = Vector2(0, 22)

[node name="attack_hitbox" type="Area2D" parent="."]
visible = false
scale = Vector2(1, 1.02431)
collision_layer = 16
collision_mask = 4
monitoring = false
monitorable = false

[node name="collision_hitbox" type="CollisionShape2D" parent="attack_hitbox"]
unique_name_in_owner = true
position = Vector2(34, -9.53674e-07)
scale = Vector2(1.3546, -0.794946)
shape = SubResource("RectangleShape2D_5gtgg")
debug_color = Color(0.992785, 0, 0.24713, 0.42)

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(3, 0)
shape = SubResource("CapsuleShape2D_qek5x")
debug_color = Color(0.513406, 0.576869, 0, 0.42)

[node name="Invincible" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-39, 330)
limit_left = 0
limit_top = 0
limit_bottom = 648

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="Invincible" to="." method="_on_invincible_timeout"]
